layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,14 +97,14 @@ hr.quote{
 }
 
 #content-wrap {
-    padding-bottom: 20rem;    /* Footer height */
+    padding-bottom: 30rem;    /* Footer height */
 }
 
 #footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    max-height: 25rem;
+    max-height: 30rem;
 }
 @media screen and (max-width: 450px){
     .qod blockquote p{
